trunk/Archive2/e9/16769a8d8782d2/output
main.cpp:11:13: error: unknown type name 'att'
    typedef att< 1, 2 > x;
            ^
main.cpp:11:16: error: expected member name or ';' after declaration specifiers
    typedef att< 1, 2 > x;
    ~~~~~~~~~~~^
2 errors generated.
